# ushcn-analysis-tool

./: .gitignore  404.html  CLAUD.md  CLAUDE.md  LICENSE  README.md  contributing.html  index.html  installation.html  mkdocs.yml  objects.inv  pyproject.toml  quickstart.html  ruff.toml  search.html  sitemap.xml  user-guide.html
.claude/commands/: prime.md
.github/workflows/: deploy.yml  docs.yml  mkdocs.yml
ai_docs/: claude_code_fresh_tutorials.md
analysis/HeatIsland Technical Paper/: main.xdv
analysis/adjustment_bias_investigation/: final_investigation_report.md
analysis/network_visualisation/: create_network_visualisation.py
analysis/progressive_bias_investigation/: COMPREHENSIVE_ANALYSIS_REPORT.md  FINDINGS.md  README.md
analysis/technical_paper/: main.tex  main.xdv  references.bib
analysis/ushcn_max_min_uhii_analysis/: README.md  create_max_temp_uhii_plot.py  create_min_temp_uhii_plot.py  findings_summary.md  max_temp_station_classification.csv  max_temp_uhii_statistics.json  max_temp_validation_log.txt  max_temp_validation_summary.json  methodology.md  min_temp_uhii_statistics.json  min_temp_validation_log.txt  min_temp_validation_summary.json  quality_control.md  run_analysis.py  test_execution.py  validation_logger.py
analysis/ushcn_network_quality_assessment/: README.md  coverage_analysis_validation_summary.json  create_station_coverage_plot.py  detailed_coverage_analysis.json  methodology.md  network_analysis_findings.md  network_quality_logger.py  station_coverage_statistics.csv  station_coverage_validation_log.txt
analysis/ushcn_uhii_analysis_1895_plus/: FINAL_RESULTS.md  README.md  create_max_temp_uhii_plot_1895.py  create_min_temp_uhii_plot_1895.py  max_temp_uhii_statistics_1895.json  (+3 more)
contributing/: index.html
data/: parquet-schema.md
docs/: index.md
installation/: index.html
quickstart/: index.html
scripts/: create_static_cities_db.py  fetch_urban_data.py
search/: search_index.json
specs/: heatisland_v2.md  heatisland_v3.md  heatisland_v4.md  heatisland_v5.md
studies/: index.html  uhii-contamination.html
tests/: README.md  __init__.py  conftest.py  test_analysis_workflow.py  test_cli_integration.py  test_data_loading.py  test_environment.py  test_output_validation.py
user-guide/: index.html
(+107 files in other folders)
