[project]
name = "ushcn-heatisland"
version = "1.0.0"
description = "US Long-Term Temperature Change Analyzer with Urban Heat Island Investigation"
readme = "README.md"
authors = [
    { name = "Richard Lyon", email = "6917342+richardjlyon@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "pyarrow>=12.0.0",
    "matplotlib>=3.7.0",
    "contextily>=1.4.0",
    "shapely>=2.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "scipy>=1.10.0",
    "pyproj>=3.4.0",
    "scikit-learn>=1.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "pymdown-extensions>=10.16",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ushcn-heatisland = "ushcn_heatisland.cli.main:app"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "contextily.*",
    "geopandas.*", 
    "shapely.*",
    "pyproj.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true
